@@ -1,5 +1,8 @@
 These are the Release Notes for post Revision 2.5.0 top-of-trunk netperf:
 
+*) The global -F option can now be used specify a local and/or remote
+   fill file.
+
 *) It is now possible to set/get the TCP congestion control algorithm
    being used by either end of the test connection when using the omni
    code.  The output selectors are LOCAL_CONG_CONTROL and
